...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="n8H-ZA-m7h"/>
                                    <constraint firstAttribute="height" constant="32" id="tTS-u2-bpv"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" red="0.97021001577377319" green="0.49003803746442021" blue="0.53523649571780341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.97021001577377319" green="0.49003803746442021" blue="0.53523649571780341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
...
                                            <outlet property="uilabelBackgroundView" destination="YId-Lx-AY6" id="Ekc-15-0Pc"/>
                                            <outlet property="uilabelBackgroundViewHeightConstraint" destination="MT4-ts-Huz" id="IPD-Av-hpS"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="answersTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jOQ-dq-Ugs">
                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fne-cu-edc">
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="47O-kd-YAV"/>
                                    <constraint firstAttribute="height" constant="32" id="aAC-7W-tNX"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <state key="normal" title="finish">
                                    <color key="titleColor" red="0.97021001579999999" green="0.49003803750000002" blue="0.53523649569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The highest similarity is" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdf-jJ-oNJ">
                                <rect key="frame" x="80.5" y="148" width="214" height="24"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
...
