...
    func setupButtons() {
        guard let isLastQuestion = isLastQuestion else {
            showError()
            return
        }
        if isLastQuestion {
            nextQuestionButton.setImage(UIImage(named: "recommend"), for: UIControlState())
            nextQuestionButton.setImage(UIImage(named: "recommend_pressed"), for: .highlighted)
            nextQuestionButton.addTarget(self, action: #selector(QuestionViewController.computeSimilarity(_:)), for: .touchUpInside)
        } else {
            nextQuestionButton.addTarget(self, action: #selector(QuestionViewController.nextQuestion(_:)), for: .touchUpInside)
        }
        previousQuestionButton.addTarget(self, action: #selector(QuestionViewController.back(_:)), for: .touchUpInside)
...
